plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.PigEBankBackend'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	implementation group: 'me.paulschwarz', name: 'spring-dotenv', version: '2.3.0'
	implementation 'io.github.cdimascio:dotenv-java:2.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.jasypt:jasypt:1.9.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
